--- a/src/styles/login.styles.scss
+++ b/src/styles/login.styles.scss
@@ -36,6 +36,18 @@
     border-radius: 25px;
 }
 
+#registerform {
+    max-width: 500px;
+    min-width: 300px;
+    max-height: 900px;
+    width: 30%;
+    height: 70%;
+    margin: 100px auto;
+    background-color: #FFFFFF;
+    border-radius: 25px;
+}
+
+
 #messageform {
     max-width: 800px;
     min-width: 300px;
@@ -51,6 +63,14 @@
     text-align: center;
     font-family: 'open sans', sans-serif;
     padding: 2rem 0;
+    margin: 0;
+    font-size: 2rem;
+}
+
+#registerheaderTitle {
+    text-align: center;
+    font-family: 'open sans', sans-serif;
+    padding: 1rem 0;
     margin: 0;
     font-size: 2rem;
 }
@@ -159,7 +179,7 @@ textarea::-webkit-scrollbar-thumb {
     padding-bottom: 1.5rem;
 }
 
-.form-control  {
+.form-control {
     width: 80%;
     box-sizing: border-box;
     border: none;
