--- a/src/styles/login.styles.scss
+++ b/src/styles/login.styles.scss
@@ -37,11 +37,12 @@
 }
 
 #registerform {
-    max-width: 500px;
+    max-width: 700px;
     min-width: 300px;
-    max-height: 900px;
-    width: 30%;
-    height: 70%;
+    max-height: 1300px;
+    width: 50%;
+    padding: 50px;
+    height: 100%;
     margin: 100px auto;
     background-color: #FFFFFF;
     border-radius: 25px;
@@ -176,27 +177,6 @@ textarea::-webkit-scrollbar-thumb {
     color: rgba(187, 187, 187, 0.9);
 }
 
-.row button {
-    border-radius: 25px;
-    width: 80%;
-    height: 40px;
-    font-size: 1.3rem;
-    color: white;
-    font-weight: 700;
-    background: rgb(34, 193, 195);
-    background: linear-gradient(90deg, rgba(34, 193, 195, 1) 0%, rgb(0, 98, 255) 100%);
-    border: 0px;
-    cursor: pointer;
-    transition: opacity 0.25s ease-out;
-}
-
-.row button:hover {
-    opacity: 0.8;
-}
-
-#button {
-    padding-bottom: 1.5rem;
-}
 
 .form-control {
     width: 80%;
@@ -224,4 +204,3 @@ textarea::-webkit-scrollbar-thumb {
 .form-control :focus::-webkit-input-placeholder {
     opacity: 0;
 }
-
