updated the page redirection

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import "./styles/common.styles.scss";
 @import "./styles/login.styles.scss";
+@import "./styles/404.styles.scss";
 
 *,
 *::before,
